products being added to packages working